# minikalle

./: .gitignore  Cargo.toml  README.md  engine.bat  gm_openings.json  random_positions
model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/variables/: variables.data-00000-of-00001  variables.index
neural_evaluator/: 768x128x64x32x32.pth  768x256x128x32x32.pth  768x512x256x32x32.pth  calculate_scaling_factor.py  export_model.sh  export_weights.py  generate_training_data.py  loss_benchmark.py  tpot_exported_pipeline.py  train.py  train_tpot.py  value.pth  value_32x32x16x16-0.2.pth  value_32x32x16x16.pth  value_bignet.pth  zst_dictionary
neural_evaluator/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_evaluator/model/variables/: variables.data-00000-of-00001  variables.index
src/: benchmark.rs  engine.rs  evaluation.rs  main.rs  neural_eval.rs  squaretables.rs  transpositiontable.rs  uciprotocol.rs
src/model/: B0.in  B1.in  B2.in  B3.in  B4.in  W0.in  W1.in  W2.in  W3.in  W4.in
src/uciprotocol/: engine.rs
src/uciprotocol/engine/: evaluator.rs  openings.rs  transpositiontable.rs
src/uciprotocol/engine/evaluator/: squaretables.rs
