[package]
name = "minikalle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shakmaty = "0.23.0"
log = "0.4.19"
log4rs = "1.2.0"
serde = "1.0.171"
serde_json = "1.0.103"
rand = "0.8.5"
rayon = "1.8.0"

[profile.release]
debug = true

[profile.dev]
debug = true

[profile.test]
incremental = true
opt-level = 0
debug = 1
lto = false
debug-assertions = true
overflow-checks = true
rpath = false 