[package]
name = "minikalle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_data"
test = false
bench = false

[[bin]]
name = "rank"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shakmaty = "0.26.0"
serde = "1.0.171"
serde_json = "1.0.103"
rand = "0.8.5"

[profile.release]
opt-level = 3
codegen-units = 1
lto = false
debug = true

[profile.dev]
debug = true

[profile.test]
incremental = true
opt-level = 2
debug = 1
lto = false
debug-assertions = true
overflow-checks = true
rpath = false 
